--- a/AngularServer/appsettings.json
+++ b/AngularServer/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;Initial Catalog=MoviesDB;User ID=sa;Password=2ulixgoi;TrustServerCertificate=true"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=MoviesDB;User ID=sa;Password=2ulixgoi;TrustServerCertificate=true",
+    "DefaultConnection2": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MoviesDB;User ID=sa;Password=2ulixgoi;TrustServerCertificate=true"
   },
   "AppConfig": {
     "Cors": "http://localhost:8080,http://localhost:5069"
